edited windows file paths

--- a/glitch_class_ver1.ipynb
+++ b/glitch_class_ver1.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OS is Darwin\n",
-      "File exists!\n"
+      "OS is Windows\n",
+      "File does not exist! Downloading...\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "\n",
     "elif pform in ['windows','cygwin']:\n",
     "    # check if data directories exist\n",
-    "    if not ( os.path.exists(dir + \"/test/\") and os.path.exists(dir + \"/train/\") and os.path.exists(dir + \"/validation/\") and os.path.isfile(dir + \"/trainingset_v1d1_metadata.csv\") ):\n",
+    "    if not ( os.path.exists(dir + \"\\\\test\") and os.path.exists(dir + \"\\\\train\") and os.path.exists(dir + \"\\\\validation\") and os.path.isfile(dir + \"\\\\trainingset_v1d1_metadata.csv\") ):\n",
     "        #unzip data\n",
     "        !unzip \"gravity-spy-gravitational-waves.zip\""
    ]
