--- a/glitch_class_ver1.ipynb
+++ b/glitch_class_ver1.ipynb
@@ -531,7 +531,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samp_blip = img.imread(test_dir + 'Blip\\\\H1_0H27ffyt60_spectrogram_0.5.png')\n",
+    "if pform in ['windows','cygwin']:\n",
+    "    samp_blip = img.imread(test_dir + 'Blip\\\\H1_0H27ffyt60_spectrogram_0.5.png')\n",
+    "elif pform == 'darwin':\n",
+    "    samp_blip = img.imread(test_dir + 'Blip/H1_0H27ffyt60_spectrogram_0.5.png')\n",
     "samp_blip_shape = samp_blip.shape\n",
     "\n",
     "#target size parameters\n",
