--- a/glitch_class_ver2.ipynb
+++ b/glitch_class_ver2.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Final Project: Determining glitch morphology classification\n",
     "## DATS 6202 - Machine Learning I \n",
-    "### Izzy Illari (gwid) and Lucia Illari (gwid)"
+    "### Izzy Illari (G38518463) and Lucia Illari (G24308643)"
    ]
   },
   {
@@ -114,49 +114,6 @@
     "* whistle\n",
     "\n",
     "Each glitch has 4 associated images, where the time range is decreased and decreased to get a zoomed in image of the glitch, so if there are 16 images in a glitch folder, there are \"actually\" 4 unqiue glitches. However, the images in this data set are only the plot space - axis labels, tick marks, legend, title, essentially anything extraneous - has been removed. There are 22349 images in the testing dataset, 4733 images in the training dataset, and 4800 images in the validation dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TO DO:**\n",
-    "\n",
-    "- [X] add table of contents\n",
-    "- [X] write information between code cells and topics\n",
-    "    - [X] title\n",
-    "    - [X] intro\n",
-    "        - [X] about the dataset\n",
-    "        - [X] problem \n",
-    "        - [X] motivation\n",
-    "    - [ ] experiment\n",
-    "        - [ ] code\n",
-    "        - [ ] discussion of results\n",
-    "    - [ ] conclusions\n",
-    "    \n",
-    "**for basic eda:**\n",
-    "    \n",
-    "- [X] import data\n",
-    "    - [X] select certain columns\n",
-    "    - [X] check if there is any missing data\n",
-    "    - [X] split data into test/train/val datasets\n",
-    "    - [X] use dummies function to encode categorical features (just ifo I think?) -> made `ifo_int` and `label_int` columns\n",
-    "    - [X] split features and target\n",
-    "- [X] counts of glitch classes & bar chart\n",
-    "- [X] corner plot\n",
-    "- [X] correlation\n",
-    "- [X] scale the data\n",
-    "\n",
-    "**DO THESE FOR IMAGE CLASSIFICATION:**\n",
-    "\n",
-    "- [X] Logistic reg/multinomial logit reg/softmax\n",
-    "- [X] Random forests\n",
-    "- [X] MLP Classifier\n",
-    "- [ ] ANN\n",
-    "- [ ] CNN\n",
-    "- [ ] KNN\n",
-    "- [X] Decision tree\n",
-    "- [ ] SVM"
    ]
   },
   {
